<resources>
    <string name="app_name">ChingluhAndroid</string>
    <string name="AlertDialog_Exit_Title">是否要退出</string>
    <string name="AlertDialog_Exit_Message">确定要登出系统并退出么？</string>
    <string name="Button_Positive_Title">确定</string>
    <string name="Button_Negative_Title">取消</string>
    <string name="ImageView_ContentDescription_Logo">清禄图标</string>
    <string name="Toast_NeedLogin_Text">请先登录系统</string>
    <string name="TextView_Login_Text">请登录系统</string>
    <string name="TextView_UserId_Text">用户名</string>
    <string name="TextView_Password_Text">密码</string>
    <string name="Button_Login_Text">登录</string>
    <string name="Button_Local_Text">单机使用</string>
    <string name="TextView_Company_Text">公司</string>
    <string name="MessageUtil_Message_InitSystemData">正在初始化系统信息</string>
    <string name="MessageUtil_Message_CheckingIn">正在登录系统</string>
    <string name="MessageUtil_Message_CheckInFail">登录失败</string>
    <string name="MessageUtil_Message_Login_Welcome">欢迎登陆</string>
    <string name="Button_QrLogin_Text">二维码登录</string>
    <string name="MessageUtil_Message_Wrong_Result">二维码错误</string>
</resources>
