<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="bottom"
              android:orientation="vertical"
	android:padding="10dip">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical"
		android:layout_margin="3dip">

		<ImageView
			android:layout_width="160dip"
			android:layout_height="120dip"
			android:src="@drawable/chingluh_logo_small"/>
	</LinearLayout>

	<TextView
		android:id="@+id/textViewUserId"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/TextView_UserId_Text"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:gravity="left"
		android:layout_margin="3dip" />

	<EditText
		android:id="@+id/editTextUserId"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:text="B471264"
		android:layout_margin="3dip">

		<requestFocus/>
	</EditText>

	<TextView
		android:id="@+id/textViewPassword"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/TextView_Password_Text"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:gravity="left"
		android:layout_margin="3dip" />

	<EditText
		android:id="@+id/editTextPassword"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="textPassword"
		android:text="981031"
		android:layout_margin="3dip" />

	<TextView
		android:id="@+id/textViewCompany"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/TextView_Company_Text"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:gravity="left"
		android:layout_margin="3dip" />

	<Spinner
		android:id="@+id/spinnerCompany"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:paddingStart="30dp"
		android:paddingEnd="30dp"
		android:layout_margin="3dip" />

	<Button
		android:id="@+id/buttonQrLogin"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/button_background"
		android:text="@string/Button_QrLogin_Text"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_margin="3dip" />

	<Button
		android:id="@+id/buttonLogin"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/button_background"
		android:text="@string/Button_Login_Text"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_margin="3dip" />
</LinearLayout>